Сделал в своем роде модуляцию проекта, вроде бы все работает